--- a/ETech.WebApp/Web.config
+++ b/ETech.WebApp/Web.config
@@ -15,4 +15,16 @@
     </compilers>
   </system.codedom>
 
+	<location path="wwwroot">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+
 </configuration>
