--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+**/App_Data/TEMP/
+**/App_Data/Logs/
+**/App_Data/ClientDependency/
+**/App_Data/Preview/
